# kestrel

./: .gitignore  CITATION.cff  README.md  configure.ac
.github/workflows/: build-and-test.yml  update_version_info.yml
docs/source/: InputExample_SRTM.txt  conf.py  contributing.rst  general guidance.rst  index.rst  output.rst  physical model.rst  quickstart.rst  settings and parameters.rst
docs/source/settings_and_parameters/: domain.rst  initial conditions.rst  output.rst  parameters.rst  solver.rst  source.rst  topog.rst
examples/: Input1d_cap_constslope.txt  Input2d_flux_SRTM.txt  InputExample_SRTM.txt
m4/: ax_lib_netcdf4.m4  ax_lib_proj.m4  ax_prog_julia.m4
paper/: paper.bib  paper.md
src/: Blur.f90  Closures.f90  DomainSettings.f90  Equations.f90  GeoTiffRead.f90  Grid.f90  HydraulicRHS.f90  InitConds.f90  Input.f90  Interp2d.f90  Limiters.f90  Makefile.am  Messages.f90  MorphodynamicRHS.f90  NetCDFUtils.f90  Output.f90  OutputSettings.f90  Parameters.f90  RasterData.cpp  RasterData.h  Redistribute.f90  Restart.f90  RunSettings.f90  SetPrecision.f90  SetSources.f90  SolverSettings.f90  TimeStepper.f90  TopogFuncs.f90  TopogSettings.f90  UpdateTiles.f90  cUTM.cpp  cUTM.h  cversion.cpp  dem.f90  main.f90  utilities.f90  utm.f90  varStringClass.f90  version.f90
tests/: Input_cap_conc.txt  Input_cap_conc_2d.txt  Input_cap_conc_2d_parallel.txt  Input_cap_conc_parallel.txt  Input_cap_dilute.txt  Input_cap_dilute_2d.txt  Input_cap_dilute_2d_parallel.txt  Input_cap_dilute_parallel.txt  Input_cap_morpho.txt  Input_cap_morpho_2d.txt  Input_cap_morpho_2d_parallel.txt  Input_cap_morpho_parallel.txt  Input_flat_depositional.txt  Input_flat_depositional_2d.txt  Input_flat_depositional_2d_parallel.txt  Input_flat_depositional_parallel.txt  Input_flux_edwards2019.txt  Input_flux_edwards2019_2d.txt  Input_flux_edwards2019_2d_parallel.txt  Input_flux_edwards2019_parallel.txt  Input_flux_hydro.txt  Input_flux_hydro_2d.txt  Input_flux_hydro_2d_parallel.txt  Input_flux_hydro_parallel.txt  Input_flux_morpho.txt  Input_flux_morpho_2d.txt  Input_flux_morpho_2d_parallel.txt  Input_flux_morpho_parallel.txt  Input_flux_single_pt.txt  Input_flux_single_pt_parallel.txt  Input_lake_at_rest_hydro.txt  Input_lake_at_rest_hydro_2d.txt  Input_lake_at_rest_morpho.txt  Input_lake_at_rest_morpho_2d.txt  Input_netcdf_restart1.txt  Input_netcdf_restart2.txt  Input_tile_indep_dynamic_100m.txt  Input_tile_indep_dynamic_20m.txt  Input_tile_indep_static_100m.txt  Input_tile_indep_static_50m.txt  (+3 more)
